Bugfix/openid spring security 6 (#1383)
* fix Admin OpenId login using Spring Security OAuth implementation

* fix public OpenId login using Spring Security OAuth implementation

* fix logout

* update documentation